<?xml version="1.0"?>
<package format="3">
  <name>forklift_robot_description</name>
  <version>0.0.1</version>
  <description> 3D model of a simple forklift </description>
  <maintainer email="renan028@gmail.com"> </maintainer>
  <author>Renan Freitas</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
